--- a/src/main/resources/com/example/hellofx/login.fxml
+++ b/src/main/resources/com/example/hellofx/login.fxml
@@ -1,27 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.LoginController">
    <VBox alignment="CENTER" layoutX="236.0" layoutY="72.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-         <Group>
+         <Group cache="true">
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
             <children>
-                <Label text="Login">
-                    <font>
-                    <Font name="System Bold" size="16.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="emailTextField" layoutY="48.0" onAction="#handleLogin" prefHeight="25.0" prefWidth="200.0" promptText="Email" />
-                <PasswordField fx:id="passwordField" layoutY="90.0" onAction="#handleLogin" prefHeight="25.0" prefWidth="200.0" promptText="Password" />
-                <Button layoutY="134.0" minHeight="-Infinity" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+               <VBox alignment="CENTER" prefHeight="247.0" prefWidth="273.0" spacing="20.0" style="-fx-padding: 20;">
+                  <children>
+                     <Label text="Login your account">
+                        <font>
+                           <Font name="System Bold" size="20.0" />
+                        </font>
+                     </Label>
+                     <TextField fx:id="emailTextField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Email">
+                        <font>
+                           <Font size="15.0" />
+                        </font>
+                     </TextField>
+                     <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Password">
+                        <font>
+                           <Font size="15.0" />
+                        </font>
+                     </PasswordField>
+                     <Button alignment="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" style="-fx-background-color: lime;" text="LOGIN">
+                        <effect>
+                           <DropShadow>
+                              <color>
+                                 <Color opacity="0.3320610821247101" />
+                              </color>
+                           </DropShadow>
+                        </effect>
+                        <font>
+                           <Font name="System Bold" size="12.0" />
+                        </font>
+                     </Button>
+                     <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="224.0" text="Don't have an account? Registration" />
+                  </children>
+               </VBox>
             </children>
          </Group>
       </children>
