--- a/src/main/resources/com/example/hellofx/login.fxml
+++ b/src/main/resources/com/example/hellofx/login.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -12,48 +12,53 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.LoginController">
-   <VBox alignment="CENTER" layoutX="236.0" layoutY="72.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <children>
-         <Group cache="true">
-            <VBox.margin>
-               <Insets />
-            </VBox.margin>
-            <children>
-               <VBox alignment="CENTER" prefHeight="247.0" prefWidth="273.0" spacing="20.0" style="-fx-padding: 20;">
-                  <children>
-                     <Label text="Login your account">
-                        <font>
-                           <Font name="System Bold" size="20.0" />
-                        </font>
-                     </Label>
-                     <TextField fx:id="emailTextField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Email">
-                        <font>
-                           <Font size="15.0" />
-                        </font>
-                     </TextField>
-                     <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Password">
-                        <font>
-                           <Font size="15.0" />
-                        </font>
-                     </PasswordField>
-                     <Button alignment="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" style="-fx-background-color: lime;" text="LOGIN">
-                        <effect>
-                           <DropShadow>
-                              <color>
-                                 <Color opacity="0.3320610821247101" />
-                              </color>
-                           </DropShadow>
-                        </effect>
-                        <font>
-                           <Font name="System Bold" size="12.0" />
-                        </font>
-                     </Button>
-                     <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="224.0" text="Don't have an account? Registration" />
-                  </children>
-               </VBox>
-            </children>
-         </Group>
-      </children>
-   </VBox>
+
+<AnchorPane fx:id="anchorMainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="840.0" styleClass="loginMainContainer" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.LoginController">
+   <children>
+      <VBox fx:id="subContainer" alignment="CENTER" layoutX="275.0" layoutY="150.0" prefHeight="128.0" prefWidth="290.0" spacing="20.0" style="-fx-padding: 25; -fx-background-color: white; -fx-background-radius: 15;" stylesheets="@styles/style.css">
+         <children>
+            <Label text="Login your account">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailTextField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Email">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" promptText="Password">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </PasswordField>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="229.0" style="-fx-background-color: lime;" text="LOGIN">
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color opacity="0.3320610821247101" />
+                     </color>
+                  </DropShadow>
+               </effect>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Hyperlink focusTraversable="false" text="Don't have an account? Registration" />
+         </children>
+         <effect>
+            <DropShadow height="32.72" offsetX="3.0" offsetY="-3.0" radius="18.7925" width="44.45">
+               <color>
+                  <Color opacity="0.40458014607429504" />
+               </color>
+            </DropShadow>
+         </effect>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
+   </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
