--- a/src/main/resources/com/example/hellofx/admin_dashboard.fxml
+++ b/src/main/resources/com/example/hellofx/admin_dashboard.fxml
@@ -13,6 +13,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -57,7 +60,7 @@
                                        </font>
                                     </Text>
                                     <ListView fx:id="stationListView" focusTraversable="false" layoutX="522.0" layoutY="132.0" prefHeight="428.0" prefWidth="342.0" />
-                                    <Button layoutX="522.0" layoutY="578.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="DELETE">
+                                    <Button layoutX="522.0" layoutY="578.0" mnemonicParsing="false" onAction="#removeStation" prefHeight="27.0" prefWidth="95.0" text="DELETE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -94,18 +97,7 @@
                                           <Font name="Oswald Medium" size="48.0" />
                                        </font>
                                     </Text>
-                                    <TextField fx:id="time" layoutX="72.0" layoutY="266.0" promptText="Time">
-                                       <font>
-                                          <Font name="Calibri Italic" size="18.0" />
-                                       </font>
-                                       <padding>
-                                          <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                                       </padding>
-                                    </TextField>
-                                    <ComboBox fx:id="dropDownTo" layoutX="72.0" layoutY="186.0" prefHeight="25.0" prefWidth="209.0" promptText="To" />
-                                    <ComboBox fx:id="dropDownFrom" layoutX="72.0" layoutY="145.0" prefHeight="25.0" prefWidth="209.0" promptText="From" />
-                                    <DatePicker fx:id="datePicker" layoutX="72.0" layoutY="226.0" prefHeight="25.0" prefWidth="209.0" />
-                                    <Button layoutX="72.0" layoutY="325.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="ADD">
+                                    <Button layoutX="72.0" layoutY="429.0" mnemonicParsing="false" onAction="#addTrip" prefHeight="27.0" prefWidth="95.0" text="ADD">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -113,13 +105,12 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <TableView focusTraversable="false" layoutX="386.0" layoutY="139.0" prefHeight="372.0" prefWidth="551.0">
+                                    <TableView fx:id="tripTable" focusTraversable="false" layoutX="386.0" layoutY="139.0" prefHeight="372.0" prefWidth="551.0">
                                       <columns>
-                                        <TableColumn editable="false" prefWidth="49.0" sortable="false" text="No." />
-                                        <TableColumn editable="false" prefWidth="155.0" sortable="false" text="From" />
-                                          <TableColumn editable="false" prefWidth="142.0" sortable="false" text="To" />
-                                          <TableColumn editable="false" prefWidth="122.0" sortable="false" text="Date" />
-                                          <TableColumn editable="false" prefWidth="82.0" sortable="false" text="Time" />
+                                        <TableColumn fx:id="fromColumn" editable="false" prefWidth="173.0" sortable="false" text="From" />
+                                          <TableColumn fx:id="toColumn" editable="false" prefWidth="155.0" sortable="false" text="To" />
+                                          <TableColumn fx:id="dateColumn" editable="false" prefWidth="130.0" text="Date" />
+                                          <TableColumn fx:id="timeColumn" editable="false" prefWidth="73.0" text="Time" />
                                       </columns>
                                     </TableView>
                                     <Button layoutX="386.0" layoutY="530.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="DELETE">
@@ -130,7 +121,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button layoutX="72.0" layoutY="366.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="REFRESH">
+                                    <Button layoutX="500.0" layoutY="530.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="REFRESH">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -138,7 +129,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button layoutX="72.0" layoutY="407.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
+                                    <Button layoutX="183.0" layoutY="429.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -146,6 +137,31 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
+                                    <GridPane layoutX="72.0" layoutY="139.0" prefHeight="271.0" prefWidth="222.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                          <RowConstraints maxHeight="76.0" minHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="108.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="118.0" minHeight="0.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="317.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="273.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="325.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="319.0" minHeight="3.0" prefHeight="27.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="292.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <ComboBox fx:id="dropDownFrom" prefHeight="47.0" prefWidth="222.0" promptText="From" GridPane.rowIndex="1" />
+                                          <ComboBox fx:id="dropDownTo" prefHeight="51.0" prefWidth="222.0" promptText="To" GridPane.rowIndex="3" />
+                                          <DatePicker fx:id="datePicker" prefHeight="41.0" prefWidth="222.0" GridPane.rowIndex="5" />
+                                          <ComboBox fx:id="time" prefHeight="29.0" prefWidth="222.0" promptText="Departure Time" GridPane.rowIndex="7" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="From" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To" GridPane.rowIndex="2" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of journey" GridPane.rowIndex="4" />
+                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Departure time" GridPane.rowIndex="6" />
+                                       </children>
+                                    </GridPane>
                                  </children>
                               </AnchorPane>
                         </content>
