--- a/src/main/resources/com/example/hellofx/ticket_counter.fxml
+++ b/src/main/resources/com/example/hellofx/ticket_counter.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -17,12 +18,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane prefHeight="760.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hellofx.TicketCounterController">
    <center>
       <ScrollPane focusTraversable="false" hbarPolicy="NEVER" prefHeight="644.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
          <content>
-            <AnchorPane prefHeight="592.0" prefWidth="1000.0">
+            <AnchorPane prefHeight="617.0" prefWidth="1000.0">
                <children>
                   <VBox layoutX="736.0" layoutY="31.0" prefHeight="520.0" prefWidth="250.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.rightAnchor="35.0">
                      <children>
@@ -62,7 +64,7 @@
                   </VBox>
                   <TableView focusTraversable="false" layoutX="33.0" layoutY="31.0" prefHeight="200.0" prefWidth="642.0">
                     <columns>
-                      <TableColumn editable="false" prefWidth="54.0" sortable="false" text="No." />
+                      <TableColumn editable="false" prefWidth="54.0" sortable="false" text="trip_id" />
                       <TableColumn editable="false" prefWidth="221.0" sortable="false" text="From" />
                         <TableColumn editable="false" prefWidth="202.0" sortable="false" text="To" />
                         <TableColumn editable="false" minWidth="0.0" prefWidth="164.0" sortable="false" text="Time" />
@@ -74,7 +76,7 @@
       </ScrollPane>
    </center>
    <top>
-      <VBox prefHeight="158.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="136.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="36.0" prefWidth="1000.0" style="-fx-background-color: white;">
                <children>
@@ -85,41 +87,43 @@
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="92.0" prefWidth="1000.0" style="-fx-alignment: center;">
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="70.0" prefWidth="1000.0" style="-fx-alignment: center;">
                <children>
-                  <GridPane prefHeight="100.0" prefWidth="510.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 12;" vgap="3.0">
+                  <GridPane hgap="15.0" prefHeight="48.0" prefWidth="600.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 12;" vgap="5.0">
                      <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="161.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="166.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="172.0" minWidth="10.0" prefWidth="172.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="67.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                            <children>
-                              <Label alignment="CENTER" contentDisplay="CENTER" text="From" />
-                              <ComboBox fx:id="dropDownFrom" prefWidth="150.0" />
+                              <ComboBox fx:id="dropDownFrom" prefHeight="25.0" prefWidth="340.0" promptText="From" />
                            </children>
                         </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <Label text="To" />
-                              <ComboBox fx:id="dropDownTo" prefWidth="150.0" />
+                              <ComboBox fx:id="dropDownTo" prefHeight="25.0" prefWidth="247.0" promptText="To" />
                            </children>
                         </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <children>
-                              <Label text="Date of Journey" />
+                              <DatePicker prefHeight="25.0" prefWidth="236.0" promptText="Date of journey" />
                            </children>
                         </VBox>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="143.0" style="-fx-background-radius: 330; -fx-background-color: #189877;" text="Button" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" style="-fx-background-radius: 330; -fx-background-color: #189877;" text="SEARCH" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                              <Font name="Calibri Bold" size="12.0" />
                            </font>
                         </Button>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="From" GridPane.halignment="LEFT" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To" GridPane.columnIndex="1" GridPane.halignment="LEFT" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of journey" GridPane.columnIndex="2" GridPane.halignment="LEFT" />
                      </children>
                      <effect>
                         <DropShadow blurType="GAUSSIAN" height="22.22" radius="10.61" spread="0.01" width="22.22">
