--- a/src/main/resources/com/example/hellofx/ticket_counter.fxml
+++ b/src/main/resources/com/example/hellofx/ticket_counter.fxml
@@ -62,14 +62,164 @@
                         </DropShadow>
                      </effect>
                   </VBox>
-                  <TableView focusTraversable="false" layoutX="33.0" layoutY="31.0" prefHeight="200.0" prefWidth="642.0">
+                  <TableView fx:id="tripTable" focusTraversable="false" layoutX="33.0" layoutY="31.0" onMouseClicked="#tripSeatFetch" prefHeight="260.0" prefWidth="642.0">
                     <columns>
-                      <TableColumn editable="false" prefWidth="54.0" sortable="false" text="trip_id" />
-                      <TableColumn editable="false" prefWidth="221.0" sortable="false" text="From" />
-                        <TableColumn editable="false" prefWidth="202.0" sortable="false" text="To" />
-                        <TableColumn editable="false" minWidth="0.0" prefWidth="164.0" sortable="false" text="Time" />
+                      <TableColumn fx:id="fromColumn" editable="false" prefWidth="221.0" sortable="false" text="From" />
+                        <TableColumn fx:id="toColumn" editable="false" prefWidth="194.0" sortable="false" text="To" />
+                        <TableColumn fx:id="dateColumn" editable="false" minWidth="0.0" prefWidth="135.0" sortable="false" text="Date" />
+                        <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="78.0" text="Time" />
                     </columns>
                   </TableView>
+                  <GridPane layoutX="33.0" layoutY="342.0" prefHeight="172.0" prefWidth="402.0" vgap="10.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="142.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="260.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="Seats" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="From" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="To" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of journey" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="Departure time" GridPane.rowIndex="5">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_name" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_seats" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_from" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_to" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_date" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_time" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="Mobile number" GridPane.rowIndex="6">
+                           <font>
+                              <Font name="Lucida Console" size="14.0" />
+                           </font>
+                        </Text>
+                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                           <children>
+                              <Text fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text=":">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                              <Text fx:id="booked_phoneNumber" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0">
+                                 <font>
+                                    <Font name="Lucida Console" size="14.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
          </content>
@@ -113,13 +263,20 @@
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <children>
-                              <DatePicker prefHeight="25.0" prefWidth="236.0" promptText="Date of journey" />
+                              <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="236.0" promptText="Date of journey" />
                            </children>
                         </VBox>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" style="-fx-background-radius: 330; -fx-background-color: #189877;" text="SEARCH" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#searchTrip" prefHeight="24.0" prefWidth="133.0" style="-fx-background-radius: 330; -fx-background-color: #189877;" text="SEARCH" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <font>
                               <Font name="Calibri Bold" size="12.0" />
                            </font>
+                           <effect>
+                              <DropShadow height="6.0" offsetX="2.0" offsetY="2.0" radius="2.5" spread="0.06" width="6.0">
+                                 <color>
+                                    <Color opacity="0.3015267252922058" />
+                                 </color>
+                              </DropShadow>
+                           </effect>
                         </Button>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="From" GridPane.halignment="LEFT" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To" GridPane.columnIndex="1" GridPane.halignment="LEFT" />
