--- a/src/main/resources/com/example/hellofx/admin_dashboard.fxml
+++ b/src/main/resources/com/example/hellofx/admin_dashboard.fxml
@@ -59,7 +59,7 @@
                                           <Font name="Oswald Medium" size="48.0" />
                                        </font>
                                     </Text>
-                                    <ListView fx:id="stationListView" focusTraversable="false" layoutX="522.0" layoutY="132.0" prefHeight="428.0" prefWidth="342.0" />
+                                    <ListView fx:id="stationListView" focusTraversable="false" layoutX="522.0" layoutY="132.0" onMouseClicked="#handleStationClick" prefHeight="428.0" prefWidth="342.0" />
                                     <Button layoutX="522.0" layoutY="578.0" mnemonicParsing="false" onAction="#removeStation" prefHeight="27.0" prefWidth="95.0" text="DELETE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
@@ -76,7 +76,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button layoutX="54.0" layoutY="274.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
+                                    <Button layoutX="54.0" layoutY="274.0" mnemonicParsing="false" onAction="#updateStation" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -97,7 +97,7 @@
                                           <Font name="Oswald Medium" size="48.0" />
                                        </font>
                                     </Text>
-                                    <Button layoutX="78.0" layoutY="484.0" mnemonicParsing="false" onAction="#addTrip" prefHeight="27.0" prefWidth="95.0" text="ADD">
+                                    <Button layoutX="44.0" layoutY="473.0" mnemonicParsing="false" onAction="#addTrip" prefHeight="27.0" prefWidth="95.0" text="ADD">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -105,16 +105,17 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <TableView fx:id="tripTable" focusTraversable="false" layoutX="386.0" layoutY="139.0" onMouseClicked="#handleTripClick" prefHeight="372.0" prefWidth="551.0">
+                                    <TableView fx:id="tripTable" focusTraversable="false" layoutX="294.0" layoutY="139.0" onMouseClicked="#handleTripClick" prefHeight="372.0" prefWidth="669.0">
                                       <columns>
-                                        <TableColumn fx:id="fromColumn" editable="false" prefWidth="134.0" sortable="false" text="From" />
-                                          <TableColumn fx:id="toColumn" editable="false" prefWidth="128.0" sortable="false" text="To" />
-                                          <TableColumn fx:id="toTrain" prefWidth="101.0" text="Train" />
-                                          <TableColumn fx:id="dateColumn" editable="false" prefWidth="105.0" text="Date" />
-                                          <TableColumn fx:id="timeColumn" editable="false" text="Time" />
+                                        <TableColumn fx:id="fromColumn" editable="false" prefWidth="138.0" sortable="false" text="From" />
+                                          <TableColumn fx:id="toColumn" editable="false" prefWidth="125.0" sortable="false" text="To" />
+                                          <TableColumn fx:id="trainColumn" prefWidth="99.0" text="Train" />
+                                          <TableColumn fx:id="seatColumn" prefWidth="129.0" text="Available seats" />
+                                          <TableColumn fx:id="dateColumn" editable="false" prefWidth="95.0" text="Date" />
+                                          <TableColumn fx:id="timeColumn" editable="false" prefWidth="77.0" text="Time" />
                                       </columns>
                                     </TableView>
-                                    <Button layoutX="386.0" layoutY="530.0" mnemonicParsing="false" onAction="#removeTrip" prefHeight="27.0" prefWidth="95.0" text="DELETE">
+                                    <Button layoutX="294.0" layoutY="530.0" mnemonicParsing="false" onAction="#removeTrip" prefHeight="27.0" prefWidth="95.0" text="DELETE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -122,7 +123,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button layoutX="500.0" layoutY="530.0" mnemonicParsing="false" onAction="#fetchTripTableData" prefHeight="27.0" prefWidth="95.0" text="REFRESH">
+                                    <Button layoutX="408.0" layoutY="530.0" mnemonicParsing="false" onAction="#fetchTripTableData" prefHeight="27.0" prefWidth="95.0" text="REFRESH">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -130,7 +131,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button layoutX="193.0" layoutY="484.0" mnemonicParsing="false" onAction="#updateTrip" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
+                                    <Button layoutX="159.0" layoutY="473.0" mnemonicParsing="false" onAction="#updateTrip" prefHeight="27.0" prefWidth="95.0" text="UPDATE">
                                        <padding>
                                           <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
                                        </padding>
@@ -138,7 +139,7 @@
                                           <Font name="Calibri" size="14.0" />
                                        </font>
                                     </Button>
-                                    <GridPane layoutX="78.0" layoutY="167.0" prefHeight="300.0" prefWidth="210.0">
+                                    <GridPane layoutX="44.0" layoutY="156.0" prefHeight="300.0" prefWidth="210.0">
                                       <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                       </columnConstraints>
